--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@ html, body {
 
     font-family: 'Montserrat', sans-serif;
 
+    color: var(--color-white);
     background: var(--color-black);
 }
 
@@ -55,8 +56,6 @@ button:focus {
 
 .title {
     line-height: 1em;
-
-    color: var(--color-white);
 }
 
 h1.title {
@@ -125,8 +124,6 @@ h4.title {
     font-weight: 500;
     font-size: 32px;
     line-height: 1.2em;
-
-    color: var(--color-white);
 }
 
 @media (max-width: 1199px) {
@@ -216,5 +213,105 @@ h4.title {
         padding: 14px 20px;
 
         font-size: 12px;
+    }
+}
+
+
+.field {
+    padding: 30px 40px;
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.2em;
+
+    border: 0;
+    border-radius: 15px;
+    color: var(--color-accent);
+    background: var(--color-white);
+}
+
+.field:focus {
+    outline: 0;
+}
+
+@media (max-width: 1199px) {
+    .field {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 767px) {
+    .field {
+        padding: 18px 16px;
+
+        font-size: 14px;
+
+        border-radius: 10px;
+    }
+}
+
+.modal {
+    display: none;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+
+    background: rgba(20, 22, 30, .7);
+    backdrop-filter: blur(100px);
+}
+
+.modal.modal_active {
+    display: block;
+}
+
+.modal__inner {
+    margin: auto;
+    padding: 50px;
+
+    width: 600px;
+    height: fit-content;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    border-radius: 15px;
+    background: var(--color-black);
+}
+
+@media (max-width: 767px) {
+    .modal__inner {
+        padding: 25px;
+
+        width: calc(100% - 40px);
+        max-width: 400px;
+    }
+}
+
+.logo__icon {
+    display: block;
+
+    width: 246px;
+    height: 36px;
+}
+
+@media (max-width: 1199px) {
+    .logo__icon {
+        width: 170px;
+        height: 28px;
+    }
+}
+
+@media (max-width: 767px) {
+    .logo__icon {
+        width: 110px;
+        height: 16px;
     }
 }
