--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,64 @@
 @import "./global.css";
 
+/* ALERT */
+.modal-alert .modal__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.alert-icon__wrapper {
+    width: 128px;
+    height: 128px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 100%;
+    background: var(--color-accent-gradient);
+}
+
+.alert__icon {
+    width: 44px;
+    height: 44px;
+}
+
+h3.alert__title {
+    margin-top: 25px;
+
+    font-size: 48px;
+    text-align: center;
+}
+
+.alert__text {
+    margin-top: 50px;
+
+    text-align: center;
+}
+
+@media (max-width: 767px) {
+    .alert-icon__wrapper {
+        width: 72px;
+        height: 72px;
+    }
+
+    .alert__icon {
+        width: 24px;
+        height: 24px;
+    }
+
+    h3.alert__title {
+        font-size: 32px;
+    }
+
+    .alert__text {
+        margin-top: 25px;
+
+        font-size: 20px;
+    }
+}
+
 /* HEADER */
 .header {
     height: 100vh;
