--- a/css/investor.css
+++ b/css/investor.css
@@ -1,82 +1,10 @@
 @import "./global.css";
 
-/* INVEST */
-h3.invest__title {
-    font-size: 48px;
-}
-
-.invest__inner {
-    margin-top: 25px;
-
-    height: 300px;
-    overflow-y: scroll;
-}
-
-.invest__inner::-webkit-scrollbar {
-    width: 5px;
-}
-
-.invest__inner::-webkit-scrollbar-track {
-    border-radius: 3px;
-    background-color: var(--color-accent);
-}
-
-.invest__inner::-webkit-scrollbar-thumb {
-    border-radius: 3px;
-    background: var(--color-white);
-}
-
-.invest__table {
-    width: 100%;
-
-    text-align: left;
-}
-
-.invest__col {
-    font-weight: 500;
-    font-size: 24px;
-}
-
-.invest__body .invest__col {
-    padding: 8px 0;
-
-    font-weight: 700;
-}
-
-@media (max-width: 767px) {
-    h3.invest__title {
-        margin: 0 auto;
-        max-width: 240px;
-
-        font-size: 32px;
-        text-align: center;
-    }
-
-    .invest__inner {
-        margin-top: 15px;
-
-        height: 150px;
-    }
-
-    .invest__col {
-        font-size: 16px;
-    }
-
-    .invest__body .invest__col {
-        padding: 5px 0;
-    }
-}
-
 /* HEADER */
 .header {
     padding: 45px 0;
 
     width: 100%;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
 }
 
 .header__nav {
@@ -154,82 +82,66 @@ h3.invest__title {
 
 /* INTRO */
 .intro {
-    min-height: 100vh;
-
-    display: flex;
-    align-items: center;
+    padding: 100px 0 250px;
 }
 
 .intro__inner {
-    padding-top: 100px;
+    text-align: center;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 .intro__title {
-    max-width: 900px;
+    max-width: 1400px;
 }
 
 .intro__text {
     margin-top: 50px;
 
-    max-width: 800px;
+    max-width: 1080px;
 }
 
 @media (max-width: 1519px) {
-    .intro__text {
-        margin-top: 36px;
+    .intro__title {
+        max-width: 1000px;
     }
 
-    .intro__img {
-        width: 330px;
+    .intro__text {
+        margin-top: 36px;
     }
 }
 
 @media (max-width: 1199px) {
     .intro {
-        padding-top: 50px;
-
-        min-height: auto;
+        padding: 50px 0 150px;
     }
 
-    .intro__inner {
-        padding-top: 0;
-
-        flex-direction: column;
-        align-items: flex-start;
+    .intro__title {
+        max-width: 600px;
     }
 
     .intro__text {
         margin-top: 24px;
 
-        max-width: 600px;
-    }
-
-    .intro__img {
-        margin-left: auto;
+        max-width: 800px;
     }
 }
 
 @media (max-width: 767px) {
     .intro {
-        padding-top: 20px;
+        padding: 25px 0 50px;
     }
 
     .intro__title {
-        max-width: 250px;
+        max-width: 400px;
     }
 
     .intro__text {
         margin-top: 10px;
 
-        max-width: 300px;
-    }
-
-    .intro__img {
-        width: 280px;
+        max-width: 400px;
     }
 }
 
